# birdfeeder

./: .cruft.json  .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  README.rst  environment.yml  install  mypy.cfg  pyproject.toml  setup.py
.github/workflows/: conda-install.yml  conda.yml  poetry.yml  pre-commit.yml  test.yml
birdfeeder/: __init__.py  async_diagnosis.py  async_utils.py  build_image.py  datetime_constants.py  datetime_helpers.py  json_helpers.py  kafka.py  liveness_api.py  logging.py  management_console.py  math_helpers.py  pytest_fixtures.py  subprocess.py  timed_aggregator.py  timestamps.py  typing_local.py
birdfeeder/aws/: autoscaling.py  base.py  exceptions.py  s3.py
birdfeeder/enum/: str_enum.py
birdfeeder/pydantic/: base_settings.py
birdfeeder/sqlalchemy/: explain_helper.py
conf/: common_logging.yml  test_logging.yml
tests/: conftest.py  test_async_diagnosis.py  test_async_utils.py  test_build_image.py  test_datetime_helpers.py  test_json_helpers.py  test_liveness.py  test_logging.py  test_management_console.py  test_math_helpers.py  test_pytest_fixtures.py  test_sqlalchemy.py  test_subprocess.py  test_timed_aggregator.py  test_timestamps.py
tests/aws/autoscaling/: generate_fixtures.py  test_autoscaling.py
tests/aws/autoscaling/fixtures/: describe_auto_scaling_group.json
tests/aws/s3/: generate_fixtures.py  test_s3.py
tests/aws/s3/fixtures/: head_object.json  nonexistent_prefix.json  valid_objects_list.json
tests/dockerfiles/: Dockerfile.test
tests/kafka/: conftest.py  test_kafka_topics_manager.py
tests/sample_configs/: redis_sentinel_config
